# cppgame

./: .gitignore  CMakeLists.txt
include/: camera.h  collisions.h  entity.h  game.h  player.h  projectile.h
src/: block.cpp  block.h  camera.cpp  camera.h  collisions.cpp  collisions.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  platform.cpp  platform.h  player.cpp  player.h  projectile.cpp  projectile.h
